# WebStudy

./: .gitmodules
advanced/backend/: .clang-format  .gitignore  index.js  package-lock.json  package.json  temp.sql
advanced/backend/resource/js/: app.js  database.js  events.js  forum.js  shared-resource.js  timelog.js  utility.js  webpage.js
advanced/front/: .clang-format  index.html  package-lock.json  package.json
advanced/front/src/: App.vue
advanced/front/src/components/: Home.vue  RightMenu.vue  TopMenu.vue
advanced/front/src/components/layout/: BottomInfo.vue  RightMenu.vue  TopMenu.vue
advanced/front/src/components/pages/: Home.vue  InfoPage.vue
advanced/front/src/components/test/: ForumTest.vue
advanced/front/src/router/: index.js
advanced/game-server/: .gitignore  CMakeLists.txt  CMakeSettings.json
advanced/game-server/projects/echo/: CMakeLists.txt
advanced/game-server/projects/echo/source/: entry.cpp
advanced/public/html/: top.html
advanced/public/js/: layout.js
advanced/web/: index.js  package.json
advanced/web/resource/js/: webpage.js
forum/: .clang-format  index.js  package-lock.json  package.json
forum/archive/: posts.json
forum/html/: home.html  new-post.html  reply.html  top.html  wait.html
forum/js/: common.js  forum.js  main.js  query.js  utils.js
forum/js/dev/: migrate.js
forum/public/html/: @.html  new-post.html  reply.html
forum/public/js/: sha256.js
forum/style/: general.css
node.js/: main.js
old/: 1.html  2.html  box.html  code.js  ex1.html  grid.html  index.html  media_query.html  style.css
